--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "mabravo153",
   "license": "ISC",
   "dependencies": {
-    "graphql-yoga": "^1.18.3"
+    "graphql-yoga": "^1.18.3",
+    "prisma-client-lib": "^1.34.10"
   },
   "devDependencies": {
     "@prisma/cli": "^2.0.0-beta.5"
